--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,18 @@ footer {
   height: 550px;
   margin: 100px auto;
 }
+body {
+  background-color: lightblue;
+}
+
+@media screen and (min-width: 400px) {
+  body {
+    background-color: lightgreen;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  body {
+    background-color: lavender;
+  }
+}
