--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     max-width: 56.25em;
     margin: 0 auto;
     box-shadow: -0.0625em 0.1875em 0.3125em 0em #cacaca;
-    background: #fff2bf;
+    background: #e6e6fa;
 }
 nav ul {
     list-style-type:none;
