--- a/css/style.css
+++ b/css/style.css
@@ -57,14 +57,8 @@ body {
   background-color: lightblue;
 }
 
-@media screen and (min-width: 400px) {
-  body {
-    background-color: lightgreen;
-  }
-}
-
-@media screen and (min-width: 800px) {
-  body {
-    background-color: lavender;
+ 
+  #page3 {
+    background-color: #808080;
   }
 }
