--- a/css/style.css
+++ b/css/style.css
@@ -56,9 +56,5 @@ footer {
 body {
   background-color: lightblue;
 }
+div#page3{background-color:#808080;}
 
- 
-  #page3 {
-    background-color: #808080;
-  }
-}
