--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     margin: 0 auto;
     box-shadow: -0.0625em 0.1875em 0.3125em 0em #cacaca;
     background: #e6e6fa;
+    text-align: center;
 }
 nav ul {
     list-style-type:none;
