--- a/css/style.css
+++ b/css/style.css
@@ -62,5 +62,6 @@ body {
     margin: 0 auto;
     box-shadow: -0.0625em 0.1875em 0.3125em 0em #cacaca;
     background: #808080;
+    text-align: center;
 }
 
